[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelgraph"
version = "0.1.0"
description = "Graph-based cybersecurity analysis platform for mapping networks, scanning vulnerabilities, and analyzing traffic."
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "scapy>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
